--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </button>
 
             <a class="navbar-brand" href="#">
-              <p><i class="fas fa-gamepad fa-lg" alt="cs-logo" id="header-img"></i> Custom Controls</p>
+              <span><i class="fas fa-gamepad fa-lg" alt="cs-logo" id="header-img"></i> Custom Controls</span>
             </a>
           </div>
 
@@ -38,18 +38,31 @@
       </nav>
     </header>
 
+    <!-- Jumbotron for video demo & CTA -->
+    <div class="container">
+      <div class="jumbotron row">
+        <div class="container">
+          <div class="col-sm-12 col-md-8">
+            <div class="embed-responsive embed-responsive-16by9" id="main">
+              <iframe class="embed-responsive-item" id="video" src="https://www.youtube.com/embed/I8HeSlIPqBA?rel=0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            </div>
+          </div>
+
+          <div class="text-content col-sm-12 col-md-4">
+            <h1 class="attention">Unique Controllers</h1>
+            <h3 id="tagline">A whole new gaming experience!</h3>
+            <form class="form-inline" id="form" action="https://www.freecodecamp.com/email-submit">
+              <div class="form-group">
+                <input type="email" class="form-control" id="email" placeholder="gamer@controllerstore.com" name="email" required>
+                <input type="submit" class="btn btn-default" id="submit">
+              </div>
+            </form>
+          </div>
+        </div>
+      </div> <!-- /.jumbotron -->
+    </div> <!-- /.container -->
+
     <div id="container">
-      <div id="main">
-        <iframe id="video" width="560" height="318" src="https://www.youtube.com/embed/I8HeSlIPqBA?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-        <form id="form" action="https://www.freecodecamp.com/email-submit">
-          <p class="attention center-text" >Unique Controllers</p>
-          <p id="tagline">A whole new gaming experience!</p>
-          <input type="email" id="email" placeholder="gamer@controllerstore.com" name="email" required>
-          <input type="submit" id="submit">
-        </form>
-      </div>
-
       <div id="features">
         <p>Lifetime Warranty</p>
         <p>Free Shipping</p>
